# Final-Project-OS

./: CMakeLists.txt  README.md  howtostart.txt  todo.txt
GroupChat/: CMakeLists.txt  DESIGN_DOCUMENT.md  README.md
GroupChat/build-local/: CMakeCache.txt  Makefile  bot_test  cmake_install.cmake  groupchat_client  groupchat_server
GroupChat/client/: audio_client.cpp  audio_client.h  chat_client.cpp  chat_client.h  client.cpp  main.cpp  video_cilent.cpp  video_client  video_client.cpp  video_client.h
GroupChat/logs/: chat_log.txt
GroupChat/server/: cache.cpp  chat_server.cpp  chat_server.h  group_manager.cpp  group_manager.h  main.cpp  thread_pool.cpp  thread_pool.h
GroupChat/shared/: cache.h  protocol.h  utils.h
GroupChat/tests/: bot_test.cpp
GroupChat/tex stuff/: design_document.aux  design_document.out  design_document.tex  design_document.toc
